--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,7 +2,7 @@
 # Colori principali
 primaryColor = "#E52217"
 backgroundColor = "#FFFFFF" 
-secondaryBackgroundColor = "#8A8A8A"
+secondaryBackgroundColor = "#F0F2F6"
 textColor = "#262730"
 
 # Font
